[package]
name = "gkmap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vizia = {git = "https://github.com/vizia/vizia"}
rfd = "0.8.1"
wasm-bindgen="0.2.69"
futures = {version="0.3.10",features=["thread-pool"]}
wasm-bindgen-futures = "0.4.19"